manifests/apps/pihole/overlays/pi-cluster/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
  - name: pi-cluster
    namespace: nginx-gateway
  hostnames:
  - "pihole.homelab.jenniferpweir.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pihole-web-svc
      namespace: pihole
      port: 80
