manifests/apps/pihole/overlays/pi-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pihole.homelab.jenniferpweir.com
    secretName: pihole-tls
  rules:
  - host: pihole.homelab.jenniferpweir.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web-svc
            port:
              number: 80
